# cctv-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-prod  docker-compose.dev.yaml  docker-compose.yaml  main.py  nginx.conf  promtail-config.yaml  pyproject.toml  requirements.txt
app/: config.py  database.py  exceptions.py  handlers.py  logger.py  main.py  version.py
app/active_monitoring/: router.py
app/admin/: auth.py  views.py
app/ai_analysis/: dao.py  models.py  router.py  schemas.py
app/analytics/: dao.py  router.py  schemas.py
app/broker_utils/: broker_init.py  camera_broker.py  incident_tg.py  schedule_broker.py
app/buildings/: dao.py  models.py  router.py  schemas.py
app/camera_utils/: streaming.py
app/cameras/: dao.py  models.py  router.py  schemas.py
app/classrooms/: dao.py  models.py  router.py  schemas.py
app/classrooms/type/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/groups/: dao.py  models.py  router.py  schemas.py
app/incidents/: dao.py  models.py  router.py  schemas.py
app/incidents/answers/: dao.py  models.py  router.py  schemas.py
app/incidents/type/: dao.py  models.py  router.py  (+1 more)
app/migrations/: env.py
app/pages/: buildings.py  router.py  schedule.py
app/schedule/: dao.py  models.py  router.py  schemas.py
app/screenshots/: router.py
app/teachers/: dao.py  models.py  router.py  schemas.py
app/templates/: base-videowall.html  base-without-mainmenu.html  base.html  mainmenu.html
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
app/utils/: cache_coder.py  filter_factory.py  find_image.py  keycloak_client.py  verify_subnet.py
docker/: entry_point.dev.sh  entry_point.sh
media/: mediamtx.yml
(+87 files in other folders)
