[project]
name = "cctv-api"
version = "0.1.1"
description = "Система видеонаблюдения"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.5.8",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.1",
    "fastapi-cache2[redis]>=0.2.2",
    "faststream>=0.6.6",
    "gunicorn>=25.0.3",
    "itsdangerous>=2.2.0",
    "opencv-python-headless>=4.13.0.92",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "python-json-logger>=4.0.0",
    "sqladmin>=0.23.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
